fixed letter spacing on list

--- a/src/Pages/Lists/Hiking/hiking.css
+++ b/src/Pages/Lists/Hiking/hiking.css
@@ -28,6 +28,7 @@
 
 #tips h1 {
     font-size:50px;
+    letter-spacing:4px;
 }
 
 #tips p {
